--- a/engine/pre-alpha/09/index.html
+++ b/engine/pre-alpha/09/index.html
@@ -1370,6 +1370,7 @@
 		<script>
 
 		//	## Local Player entity instance.
+
 		//	Local player is a WorldControllable-type entity instance.
 		//	Local player is world-user-animate-controllable.
 		//	Local player has a character controller.
@@ -1378,7 +1379,7 @@
 
 			const localPlayer = new Entity();
 
-		//	localPlayer without avatar.
+		//	localPlayer abstract.
 
 			(function(){
 
@@ -1584,6 +1585,7 @@
 				//	takeCameraControls( group, 0.85 );
 
 				//	And components.
+					entity.holder = group;
 					entity.boundingSphere = boundingSphere;
 					entity.skeletonHelper = skeletonHelper;
 				//	entity.keyInputControls = keyInputControls;
